Remove -XX:MaxPermSize from Suite build, Java 1.8 updates